# goit-pyweb-hw-07

goit-pyweb-hw-07/: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
goit-pyweb-hw-07/alembic/versions/: b08d4a6c04cc_remove_date_column_from_group.py  ff447f18f3c9_init.py
