[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["your_name <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
alembic = "^1.7"
psycopg2-binary = "^2.9"
faker = "^13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
